--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>식재료 객체 인식</title>
 </head>
 <body>
-
+<h1>식재료 객체 인식</h1><br>
 <form action="/ai" method="post" enctype="multipart/form-data">
     <input name="image" type="file">
     <button>전송</button>
 </form>
-
+<h2>인식 가능한 데이터</h2><br>
+{<br>
+    "bean sprouts":"콩나물",<br>
+    "beef":"쇠고기",<br>
+    "chicken":"닭고기",<br>
+    "egg":"달걀",<br>
+    "fork":"돼지고기",<br>
+    "garlic":"마늘",<br>
+    "green onion":"파",<br>
+    "kimchi":"김치",<br>
+    "onion":"양파",<br>
+    "photato":"감자",<br>
+    "spam":"스팸"<br>
+}<br>
 </body>
 </html>
