Design:result.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>천개의 식재료</title>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}"> -->
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/layer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <!-- <link rel="stylesheet" href="../static/css/layer.css">
+    <link rel="stylesheet" href="../static/css/home.css"> -->
 </head>
 <body>
   <div class="container">
