--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,6 +1,6 @@
 .resultImage {
   display: flex;
-  width: 50%;
+  width: 70%;
 }
 
 .recipe {
@@ -13,9 +13,66 @@
 
 .slideMenu {
   display: flex;
-  height: 30vh;
-  width: 50%;
-  background-color: black;
+  height: 20vh;
+  width: 70%;
+  margin-top: 1rem;
   flex-direction: column;
   align-items: center;
+}
+
+.slideMenu::-webkit-scrollbar {
+  width: 1rem;
+  height: 1.1rem;
+}
+
+.slideMenu::-webkit-scrollbar-track {
+  background: #737373;
+  border-radius: 10vw;
+  margin-block: 0.5rem;
+}
+
+.slideMenu::-webkit-scrollbar-thumb:hover {
+  background: #0D0D0D;
+  border-radius: 100vw;
+}
+
+.slideMenu {
+  display: grid;
+  gap: 0.5rem;
+  grid-auto-flow: column;
+  grid-auto-columns: 75%;
+  padding: 0.5rem;
+  overflow-x: scroll;
+  background: #D9D9D9;
+  border-radius: 1rem;
+  position: relative;
+}
+
+.slideMenu .menuItem {
+  background: hsl(0 0% 90%);
+  height: 70%;
+  border-radius: 1rem;
+  border: 0.5rem solid hsl(0 0% 60%);
+  padding: 1rem;
+}
+
+.menuItem .recipeTitle {
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.menuItem .recipeUrl {
+  display: flex;
+  text-decoration-line: none;
+  font-size: 0.7rem;
+  font-weight: 700;
+  color: white;
+  text-align: center;
+  padding: 3px;
+  margin-top: 1rem;
+  border-radius: 15px;
+  cursor: pointer;
+  background-color: #2E64FE;
+  justify-content: center;
 }
