--- a/templates/result.html
+++ b/templates/result.html
@@ -17,8 +17,8 @@
                 <div class="slideMenu">
                     {% for material in materials %}
                             <div class="menuItem">
-                                <div class="recipeTitle">{{ material[0] }}</div>
-                                <a class="recipeUrl" href="https://www.10000recipe.com/{{ material[1] }}">레시피 보러가기</a>
+                              <div class="recipeTitle">{{ material[0] }}</div>
+                              <div class="recipUrl"><a href="https://www.10000recipe.com/{{ material[1] }}">레시피 보러가기</a></div>
                             </div>
                     {% endfor %}          
                 </div>
